k8s/application/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studysync-frontend
  namespace: studysync-prod
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: frontend-port
